--- a/boilerplate/advisors.html
+++ b/boilerplate/advisors.html
@@ -41,34 +41,32 @@
 			<div class="container advisoryBoard">
 				<div class="row">
 				    <div class="col-md-6">
-		    <p class="page-header-intro">AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidence, and direction on future next steps for AttainX, offer thought leadership for products that AttainX is building on Big Data, Analytics, Mobility and Cloud.</p>
+		    <p class="page-header-intro">AttainX advisors consists of former Federal and commercial C-Level executives. Our advisors meets every quarter and reviews the roadmap and strategies of AttainX. The advisors provides guidence, and direction on future next steps for AttainX, offer thought leadership for AttainX Federal and State Information Technology Solutions.</p>
 		</div>
 					<div class="col-md-9">
             <h2 class="section-heading">Natalia Olson-Urtecho</h2>
 						<p>Natalia Olson-Urtecho was the Regional Administrator for the U.S. Small Business Administration, served as a Presidential Appointee from 2012-21017, she was responsible for delivery and management of small business programs, financial assistance, and business development initiatives throughout the mid-Atlantic region. She served a population of nearly 30 million in 7 district offices though out Pennsylvania; Delaware; Maryland.; West Virginia; Virginia, and Washington, D.C.</p> <p>Olson-Urtecho oversaw more than 180 SBA offices; SCORE chapters; Business Development Centers and other resources while managing a field staff of more than 100 loan, business, community outreach specialists and support personnel. She worked with local lenders and successful firms across the region, overseeing more than $34.2 billion in federal government contracts for goods and services purchased from local entrepreneurs.</p>
 						<p>She has more than 18 years of experience working with international, regional and local entities in Latin America, Central Europe and Asia. She has professional experience in finance, government contracting, international collaboration, commercialization of clean technologies, environmental planning, sustainable building, zoning, land use, transportation, public engagement and infrastructure policies and development. She was appointed by the U.S. Secretary of Commerce to the U.S. Innovation Advisory Board and by Philadelphia's Mayor to the Philadelphia City Planning Commission and Zoning Code Commission boards.</p>
 						<p>Olson-Urtecho was recently recognized as a “Latina Powerhouse” by the Maryland Hispanic Business Conference, was named one of Delaware Valley's (PA,NJ, DE) Most Influential Latinos in 2014, and received the Philadelphia Business Journal’s 2010 Minority Business Leader Award. In 2009 she received the Women of Distinction Award. She has lived in seven countries and speaks Spanish, French and Portuguese and was a guest lecturer at the University of Pennsylvania and Temple University.</p>
-          
+
 					</div>
 					<div class="col-md-3">
 						<!-- RIGHT SIDEBAR CONTENT -->
 						<a href="#"><img src="img/nataliaOlson.jpg" class="img-responsive" alt=""></a>
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
-					<div class="col-md-9">
-                        <h2 class="section-heading">Joyce Hunter Bio</h2>
+					<!--<div class="col-md-9">
+            <h2 class="section-heading">Joyce Hunter</h2>
 						<p>Joyce Hunter is a strategic-doer and a social entrepreneur. An appointee in the Obama Administration, she is the former Deputy Chief Information Officer for Policy and Planning at the Department of Agriculture. In addition to policy and technology planning, Ms. Hunter oversaw the Departments 3.4 billion dollar IT investment portfolio, is the creator of the USDA’s Open Data STEAM (Science Technology Engineering Agriculture and Math) summer camp for underserved youth, managed 3 successful Hackathons and was the executive sponsor of the IT Fellows Program. With over 30 years’ experience in the information technology industry, Ms.Hunter demonstrated a strong ability to build and sustain relationships with public/private stakeholders, develop and lead innovative projects and inter-agency initiatives.</p>
-						<p> Ms.Hunter was the CEO of Vulcan Enterprises prior to her federal appointment and has returned to that role. Vulcan is an IT service and strategic management consulting organization, where she also provides executive advisory services to corporate and federal CXO’s.</p>
+						<p> Ms.Hunter was the CEO of Vulcan Enterprises prior to her Federal appointment and has returned to that role. Vulcan is an IT service and strategic management consulting organization, where she also provides executive advisory services to corporate and federal CXO’s.</p>
 						 <p>She served over 10 years with Lotus Development Corporation, rising to the level of Global Account Manager for Ernst and Young International and Marriott International for the US, Asia, Europe and Africa.</p>
 						 <p>Ms.Hunter earned a BA from Villanova University and an MBA in Marketing from the University of Pennsylvania, Wharton School of Business and has a certificate in Emotional Intelligence.</p>
 						 <p>She was selected by the editors of FedScoop to be included in the 2017 and 2016 annual list of &quot;D.C.’s Top 50 Women in Technology”, the 2016 Top 50 Federal Leaders, a 2017 recipient of the Roy L. Clay Sr. Technology Pinnacle Award as one of the 50 Most Important African-Americans in Technology and a recipient of the Wharton DC School Club’s Joseph A. Wharton Award for public service.</p>
 						 <p>Ms. Hunter is on the steering committee of the Global Women in STEM, a member of STEMConnector’s Million Women Mentors and recently published in The Handbook of Federal Government Leadership and Administration: Transforming, Performing and Innovating in a Complex World (Routledge).</p>
 					</div>
 					<div class="col-md-3">
-						<!-- RIGHT SIDEBAR CONTENT -->
 						<a href="#"><img src="img/joyceHunterBio.jpg" class="img-responsive" alt=""></a>
-						<!-- END RIGHT SIDEBAR CONTENT -->
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
