--- a/boilerplate/bigData.html
+++ b/boilerplate/bigData.html
@@ -47,7 +47,7 @@
 						While volume indicates more data, it is the granular nature of the data that is unique. Big data requires processing high volumes of low-density, data of unknown value, such as Twitter data feeds, sensor-enabled equipment capturing data at the speed of light, and many more.</P><P>
 						We provide easy connect to your data with just a few clicks and easily create powerful dashboards and Easily scale from a single server to multiple datacenters.Main challenges are capture, sharing, analytics, storage, search, , visualizing and requires massively parallel software running on, hundreds or even thousands of servers.
 						</p>
-                        <p>Attainx has a Big Data Analytics product that is built on   open source.</p>
+                        <p>AttainX has a Big Data Analytics product that is built on   open source.</p>
                         <ul>
                         <li>Real Time search capability of Documents in Big Data.</li>
                     <li>Secure Content Management of Document in Big Data</li>
