--- a/boilerplate/careers.html
+++ b/boilerplate/careers.html
@@ -43,7 +43,7 @@
     					    </div>
 
                   <p>
-                    Please send your resume to <a href="mailto:hr@attainx.com">hr@attainx.com</a>
+                    Please send your resume to <a href="mailto:staffing@attainx.com">staffing@attainx.com</a>
                   </p>
       						<br>
 
