--- a/boilerplate/cloud.html
+++ b/boilerplate/cloud.html
@@ -70,7 +70,7 @@
 						<li>Cloud Ready – Pay by Drink Provisioning, SOA, Catalog of Services on Demand.</li>
 						</ul>
 
-						<p>Attainx has extensive experience in Cloud offerings, we have partnered with number of leading cloud providers to provide our clients with Cloud services.</p>
+						<p>AttainX has extensive experience in Cloud offerings, we have partnered with number of leading cloud providers to provide our clients with Cloud services.</p>
 						<p>We work with various IaaS, PaaS, and SaaS providers to achieve the success of our clients missions and goals.</p>
 						<p>The steps we followed for Cloud Migration Services are as follows:</p>
 						<ul>
@@ -90,7 +90,7 @@
 						</ul>
 
 
-						<h3>Attainx Cloud Partners / Team</h3>
+						<h3>AttainX Cloud Partners / Team</h3>
 						<ul>
 						<li>DLT Solutions – Reseller of AWS</li>
 						<li>AWNIX - The Awnix Rival Cloud, or ARC, is a turnkey OpenStack with integrated Software Defined Networking Cloud platform.</li>
