--- a/boilerplate/contractVehicles.html
+++ b/boilerplate/contractVehicles.html
@@ -41,6 +41,10 @@
           <!-- LATEST CERTIFICAITON -->
           <section>
                  <div class="container">
+                   <h2>SeaPort-e</h2>
+                    <p>Seaport Enhanced Multiple Award Contract Vehicle</p>
+                  <h2>GSA 70</h2>
+                    <p>GSA Information Technology (Schedule 70)  Contract #GS-35F-293DA</p>
                       <div class="contractVehicles">
                         <ul class="clients-block">
                             <li>
@@ -48,15 +52,19 @@
                             </li>
                             <li>
                                 <a href="#"><img src="img/gsaoasis.jpg" class="img-responsive" alt=""></a>
+                                <span>SUB CONTRACTOR</span>
                             </li>
                             <li>
                                 <a href="#"><img src="img/gsastar.jpg" class="img-responsive" alt=""></a>
+                                <span>SUB CONTRACTOR</span>
                             </li>
                             <li>
                                 <a href="#"><img src="img/gsaAlliant.png" class="img-responsive" alt=""></a>
+                                <span>SUB CONTRACTOR</span>
                             </li>
                             <li>
                                 <a href="#"><img src="img/seaport.png" class="img-responsive" alt=""></a>
+                                <span>ON TEAM</span>
                             </li>
                           </ul>
                           </div>
