--- a/boilerplate/erp.html
+++ b/boilerplate/erp.html
@@ -42,7 +42,7 @@
 					    <div class="featured-image">
 					        <a href="#"><img src="img/adobe-stock/erp-main-140345664.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-                        <p>Attainx specializes in implementations of ERP software SAP, Peoplesoft, Oracle and others COTS packages.</p>
+                        <p>AttainX specializes in implementations of ERP software SAP, Peoplesoft, Oracle and others COTS packages.</p>
 						<p>A successful Enterprise Resource Planning (ERP) project begins with finding the software with the right “fit” for your organization. ERP systems need regular upgrade to make them function properly with changing business needs. Many companies underestimate the significance of a thorough evaluation process and force fitting the wrong software can be very costly, time-consuming and risky. With our support services, businesses can avail of migration support, troubleshoot bugs and many other issues like security alerts, leveraging the worldwide community, etc. can be effectively fulfilled.</p>
 						<P>We concentrate on a set of guiding principles and with a common mission to provide customized solutions to our clients. When evaluating ERP, small-to-midsize organizations should look for ease of use and simplicity of implementation. It is also important to remember budgeting for ERP, despite any complex requirements you might have — often there is insufficient budget or human resources available to devote the required effort to maintaining IT infrastructure. Understanding the importance of rapid ERP deployments, compressed budgets, and squeezed time-lines, our ERP professionals provide the best ERP services, and offer reliable, low-cost and affordable ERP Maintenance & Support Services to our clients across the globe. We propose business process optimization and support implementation with high-performance, low-cost Enterprise Resource Planning software package.
 						</p>
@@ -73,7 +73,7 @@
         map = new google.maps.Map(document.getElementById('map-canvas'), myOptions),
         markerA = new google.maps.Marker({
             position: latLng,
-            title: "Attainx Office",
+            title: "AttainX Office",
             map: map
         });
 }
