--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -64,8 +64,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<p class="lead">AttainX Inc., is a SBA Certified 8a, Hubzone, EDWOSB/WOSB small business. AttainX is also a Virginia SWAM Certified and ISO 9001:2008 certified company.</p>
-            <p>Attainx delivers information technology solutions to federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions, we also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
+						<p class="lead">AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB/WOSB small business. AttainX is also a Virginia SWAM Certified and ISO 9001:2008 certified company.</p>
+            <p>AttainX delivers information technology solutions to Federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions. We also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
 						<img src="img/it-dashboard.png" class="img-responsive" alt="Image Intro">
@@ -82,28 +82,28 @@
 						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-flag"></i>
 							<h2 class="boxed-content-title">OUR GOAL</h2>
-							<p>Our passion is to excel in our performance excellence. We exceed in our commitment to our clients in terms of technology, people and services our passion is to build a partnership with our Client to deliver the state of art technology and help cut development, operational and maintenance costs. This goal enables us to provide world class service.</p>
+							<p>Our passion is to excel in our performance excellence. We exceed in our commitment to our clients in terms of technology, people and services our passion is to build a partnership with our client to deliver state of the art technology and help cut development, operational and maintenance costs. This goal enables us to provide world class service.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-globe"></i>
 							<h2 class="boxed-content-title">OUR TEAM</h2>
-							<p>We have highly skilled and experienced team with delivery experience in federal and state, our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success at a lower cost. Our commitment to quality and delivery makes us different, our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve, ISO, CMMI and ITIL</p>
+							<p>We have highly skilled and experienced team with delivery experience in Federal and State. Our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success at a lower cost. Our commitment to quality and delivery makes us different. Our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve ISO, CMMI and ITIL certifications.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-cog"></i>
 							<h2 class="boxed-content-title">FLEXIBLE</h2>
-							<p>Our client’s needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs. Our custom IT dashboard provides our clients real time access to their IT Budget/ IT spend, resource utilization and optimization, current status and upcoming milestones.</p>
+							<p>Our client’s needs are unique and different. We as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs. Our custom IT dashboard provides our clients real time access to their IT Budget/ IT spend, resource utilization and optimization, current status and upcoming milestones.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-users"></i>
-							<h2 class="boxed-content-title">ADVISORY BOARD</h2>
-							<p>AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidance, and direction on future next steps for AttainX, offer thought leadership for innovative products and solutions that AttainX is building on Big Data, Analytics, Cyber Securty, Enterprise Architecture, Mobility and Cloud.</p>
+							<h2 class="boxed-content-title">ADVISORS</h2>
+							<p>AttainX advisors consists of former Federal and commercial C-Level executives. Our advisors meet every quarter and review the roadmap and strategies of AttainX. The advisors provide guidance and direction on Federal strategy and solutions.</p>
 						</div>
 					</div>
 				</div>
@@ -151,7 +151,7 @@
 				<div class="testimonial slick-carousel">
 					<div class="testimonial-container">
 						<div class="testimonial-body">
-							<p>AttainX Inc., is a SBA Certified 8a, Hubzone,EDWOSB, we specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
+							<p>AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB, SDB & WOSB. We specialize in Information Technology solutions in Software Application Development, Cyber Security, Big Data, DevOps, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
 						</div>
 					</div>
 				</div>
@@ -170,7 +170,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Email us at <a href="mailto:info@attainx.com">info@attainx.com</a> or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Email: <a href="mailto:info@attainx.com">info@attainx.com</a> or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
