--- a/boilerplate/news.html
+++ b/boilerplate/news.html
@@ -40,12 +40,18 @@
 				<div class="row">
 					<div class="col-md-9">
 						<ul>
-              <li>SBA Certified Attainx as Hubzone</li>
-              <li>Virginia State certified Attainx as a SWAM Certified vendor.</li>
-              <li>February 2016 – Attainx Certified ISO 9001-2008</li>
-              <li>February 2017 -  Attainx recertified for ISO- 9001: 2008</li>
-              <li>March 2017 -   Attainx protot for the Big data, appreciated by financial clients, new development needs have been provided.</li>
-              <li>May 2017 – CMMI Level 3 appraisal in progress.</li>
+              <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
+              <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
+              <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
+              <li>February 2017 -  AttainX is recertified for ISO 9001:2008</li>
+              <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+              <li>December 2016 - AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
+              <li>June 2016 - AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
+              <li>June 2016 - AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
+              <li>April 2016 - AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
+              <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
+              <li>February 2016 – AttainX is certified ISO 9001:2008</li>
+              <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
             </ul>
 					</div>
 					<div class="col-md-3" id="rightColumn">
@@ -70,7 +76,7 @@
         map = new google.maps.Map(document.getElementById('map-canvas'), myOptions),
         markerA = new google.maps.Marker({
             position: latLng,
-            title: "Attainx Office",
+            title: "AttainX Office",
             map: map
         });
 }
