--- a/boilerplate/agileSoftwareDevelopment.html
+++ b/boilerplate/agileSoftwareDevelopment.html
@@ -73,7 +73,7 @@
         map = new google.maps.Map(document.getElementById('map-canvas'), myOptions),
         markerA = new google.maps.Marker({
             position: latLng,
-            title: "Attainx Office",
+            title: "AttainX Office",
             map: map
         });
 }
