--- a/boilerplate/testing.html
+++ b/boilerplate/testing.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Testing and IV&V</h1>
+				<h1 class="page-title pull-left">Software Testing - Independent Verification & Validation</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li class="active">Testing and IV&V</li>
+					<li class="active">Software Testing</li>
 				</ol>
 			</div>
 		</div>
