changes for news scrolling

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
+        
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -26,23 +26,40 @@
         <div id="navBar"></div>
 
                     <!-- HERO UNIT -->
-                                        		<section class="hero-unit-slider slider-responsive no-margin">
-                                         			<div class="slick-carousel">
-                                         				<div class="heroImage" role="listbox">
-                                         					<div>
-                                        					<img src="img/adobe-stock/hero-01-22160532.jpg" class="img-responsive" alt="Slider Image">
+	<section class="hero-unit-slider slider-responsive no-margin">
+			<div class="slick-carousel">
+				<div class="heroImage" role="listbox">
+					<div>
+				<img src="img/adobe-stock/hero-01-22160532.jpg" class="img-responsive" alt="Slider Image">
 
-                                       					</div>
-                                         					<div>
-                                         					<img src="img/adobe-stock/hero-02-145438301.jpg" class="img-responsive" alt="Slider Image">
-                                         					</div>
-                                         					<div>
-                                         					<img src="img/adobe-stock/hero-03-87909563.jpg" class="img-responsive" alt="Slider Image">
-                                         					</div>
-                                                          </div>
-                                                         </div>
-                                        		</section>
-                                        		<!-- END HERO UNIT -->
+				</div>
+					<div>
+					<img src="img/adobe-stock/hero-02-145438301.jpg" class="img-responsive" alt="Slider Image">
+					</div>
+					<div>
+					<img src="img/adobe-stock/hero-03-87909563.jpg" class="img-responsive" alt="Slider Image">
+					</div>
+              </div>
+             </div>
+	</section>
+	<!--pacing news on top of heroImage -->
+	<div class="news-outerContainer">
+		<ul class="news-innerContainer">
+          <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
+          <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
+          <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
+          <li>February 2017 -  AttainX is recertified for ISO 9001:2008</li>
+          <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+          <li>December 2016 - AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
+          <li>June 2016 - AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
+          <li>June 2016 - AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
+          <li>April 2016 - AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
+          <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
+          <li>February 2016 – AttainX is certified ISO 9001:2008</li>
+          <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
+           </ul>
+	</div>
+	<!-- END HERO UNIT -->
 
 
 <div class="main-features ">
