--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -17,7 +17,6 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-        
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -43,8 +42,9 @@
              </div>
 	</section>
 	<!--pacing news on top of heroImage -->
-	<div class="news-outerContainer">
-		<ul class="news-innerContainer">
+	<div id="content" class="infocontent"> 
+		<div id="top" class="infolist">
+		<ul>
           <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
           <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
           <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
@@ -57,8 +57,10 @@
           <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
           <li>February 2016 – AttainX is certified ISO 9001:2008</li>
           <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
-           </ul>
-	</div>
+         </ul>
+		</div>
+		<div id="bottom" class="infolist"></div> 
+		</div>
 	<!-- END HERO UNIT -->
 
 
