Hero image overlay news added

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -6,11 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Welcome to AttainX</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -42,24 +41,24 @@
              </div>
 	</section>
 	<!--pacing news on top of heroImage -->
-	<div id="content" class="infocontent"> 
+	<div id="content" class="infocontent hidden-md hidden-xs hidden-sm">
 		<div id="top" class="infolist">
 		<ul>
-          <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
-          <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
-          <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
-          <li>February 2017 -  AttainX is recertified for ISO 9001:2008</li>
-          <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015</li>
-          <li>December 2016 - AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
-          <li>June 2016 - AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
-          <li>June 2016 - AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
-          <li>April 2016 - AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
-          <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
-          <li>February 2016 – AttainX is certified ISO 9001:2008</li>
-          <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
+          <li><span>June 2017</span>AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
+          <li><span>May 2017</span>CMMI Level 3 appraisal is in progress</li>
+          <li><span>March 2017</span>AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
+          <li><span>February 2017</span>AttainX is recertified for ISO 9001:2008</li>
+          <li><span>February 2017</span>AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+          <li><span>December 2016</span>AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
+          <li><span>June 2016</span>AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
+          <li><span>June 2016</span>AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
+          <li><span>April 2016</span>AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
+          <li><span>April 2016</span>GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
+          <li><span>February 2016</span>AttainX is certified ISO 9001:2008</li>
+          <li><span>February 2016</span>AttainX is certified by the SBA as a HUBZone small business </li>
          </ul>
 		</div>
-		<div id="bottom" class="infolist"></div> 
+		<div id="bottom" class="infolist"></div>
 		</div>
 	<!-- END HERO UNIT -->
 
