--- a/boilerplate/advisors.html
+++ b/boilerplate/advisors.html
@@ -55,7 +55,7 @@
 						<a href="#"><img src="img/nataliaOlson.jpg" class="img-responsive" alt=""></a>
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
-					<!--<div class="col-md-9">
+					<div class="col-md-9">
             <h2 class="section-heading">Joyce Hunter</h2>
 						<p>Joyce Hunter is a strategic-doer and a social entrepreneur. An appointee in the Obama Administration, she is the former Deputy Chief Information Officer for Policy and Planning at the Department of Agriculture. In addition to policy and technology planning, Ms. Hunter oversaw the Departments 3.4 billion dollar IT investment portfolio, is the creator of the USDA’s Open Data STEAM (Science Technology Engineering Agriculture and Math) summer camp for underserved youth, managed 3 successful Hackathons and was the executive sponsor of the IT Fellows Program. With over 30 years’ experience in the information technology industry, Ms.Hunter demonstrated a strong ability to build and sustain relationships with public/private stakeholders, develop and lead innovative projects and inter-agency initiatives.</p>
 						<p> Ms.Hunter was the CEO of Vulcan Enterprises prior to her Federal appointment and has returned to that role. Vulcan is an IT service and strategic management consulting organization, where she also provides executive advisory services to corporate and federal CXO’s.</p>
@@ -66,7 +66,7 @@
 					</div>
 					<div class="col-md-3">
 						<a href="#"><img src="img/joyceHunterBio.jpg" class="img-responsive" alt=""></a>
-					</div>-->
+					</div>
 				</div>
 			</div>
 		</div>
