News item added

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -44,6 +44,7 @@
 	<div id="content" class="infocontent hidden-md hidden-xs hidden-sm">
 		<div id="top" class="infolist">
 		<ul>
+          <li><span>27th July 2017 </span>Attainx awarded prime  USDA contract for Software Development, Software support, project and program management.    Attainx  utilizes Agile software development practices centered on the SCRUM methodology and  maximizes government ROI and customer satisfaction.</li>
           <li><span>June 2017</span>AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
           <li><span>May 2017</span>CMMI Level 3 appraisal is in progress</li>
           <li><span>March 2017</span>AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
