Cmmil 3 certification added

--- a/boilerplate/certifications.html
+++ b/boilerplate/certifications.html
@@ -43,6 +43,9 @@
                        <div class="container">
                             <div class="certification">
                                     <div>
+                                        <a href="#"><img src="img/cmmil3.png" class="img-responsive" alt=""></a>
+                                    </div>
+                                    <div>
                                         <a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
                                     </div>
                                     <div>
