--- a/boilerplate/news.html
+++ b/boilerplate/news.html
@@ -40,6 +40,7 @@
 				<div class="row">
 					<div class="col-md-9">
 						<ul>
+              <li><span>7th September 2017 </span>Attainx received CMMI L3 approval.</li>
               <li>27th July 2017 - Attainx awarded prime  USDA contract for Software Development, Software support, project and program management.    Attainx  utilizes Agile software development practices centered on the SCRUM methodology and  maximizes government ROI and customer satisfaction.</li>
               <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
               <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
