New edits from Client

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -25,15 +25,17 @@
 
                     <!-- HERO UNIT -->
 	<section class="hero-unit-slider slider-responsive no-margin">
+		<div class="introtext hidden-xs hidden-sm">A company with CMMIDEV 3, Certified 8(a), HUBZone, EDWOSB, ANAB, SDB & WOSB, ISO 9001:2008</div>
 			<div class="slick-carousel">
 				<div class="heroImage" role="listbox">
+
 					<div>
 				<img src="img/adobe-stock/hero-01-22160532.jpg" class="img-responsive" alt="Slider Image">
 
 				</div>
-					<div>
+					<!--<div>
 					<img src="img/adobe-stock/hero-02-145438301.jpg" class="img-responsive" alt="Slider Image">
-					</div>
+					</div>-->
 					<div>
 					<img src="img/adobe-stock/hero-03-87909563.jpg" class="img-responsive" alt="Slider Image">
 					</div>
@@ -41,7 +43,7 @@
              </div>
 	</section>
 	<!--pacing news on top of heroImage -->
-	<div id="content" class="infocontent hidden-md hidden-xs hidden-sm">
+	<!--<div id="content" class="infocontent hidden-md hidden-xs hidden-sm">
 		<div id="top" class="infolist">
 		<ul>
 		  <li><span>7th September 2017 </span>Attainx received CMMI L3 approval.</li>
@@ -64,6 +66,56 @@
 		</div>
 	<!-- END HERO UNIT -->
 
+		<div class="ticker-container hidden-xs hidden-sm">
+			<div class="ticker-caption">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;News</p>
+			</div>
+			<ul>
+				<div>
+					<li><span>7th September 2017 </span> Attainx received CMMI L3 approval.</li>
+				</div>
+
+				<div>
+					<li><span>June 2017</span> AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
+				</div>
+				<div>
+					<li><span>27th July 2017 </span> Attainx awarded prime  USDA contract for Software Development, Software support, project and program management. </li>
+				</div>
+				<div>
+					<li><span>May 2017</span> CMMI Level 3 appraisal is in progress</li>
+				</div>
+				<div>
+				<li><span>March 2017</span> AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
+				</div>
+				<div>
+					<li><span>February 2017</span> AttainX is recertified for ISO 9001:2008</li>
+				</div>
+				<div>
+					<li><span>February 2017</span> AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+				</div>
+				<div>
+					<li><span>December 2016</span> AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
+				</div>
+				<div>
+					<li><span>June 2016</span> AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
+				</div>
+				<div>
+						<li><span>June 2016</span> AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
+				</div>
+				<div>
+					<li><span>April 2016</span> AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
+				</div>
+				<div>
+					<li><span>April 2016</span> GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
+				</div>
+				<div>
+					<li><span>February 2016</span> AttainX is certified ISO 9001:2008</li>
+				</div>
+				<div>
+					<li><span>February 2016</span> AttainX is certified by the SBA as a HUBZone small business </li>
+				</div>
+			</ul>
+		</div>
 
 <div class="main-features ">
 			<div class="container">
@@ -201,5 +253,6 @@
         <script src="js/vendor/slick.min.js"></script>
         <script src="js/vendor/jquery.stellar.min.js"></script>
         <script src="js/main.js"></script>
+		<script src="js/ticker.js"></script>
     </body>
 </html>
